<resources>
    <string name="app_name">PopularMovies</string>
    <string name="original_title">Title</string>
    <string name="poster_detail">poster_detail</string>
    <string name="release_date">Date</string>
    <string name="rating">Rating</string>
    <string name="plot_synopsis">Plot synopsis</string>
    <string name="action_rating">Top Rated</string>
    <string name="action_popularity">Popular</string>
    <string name="author">Author:</string>
    <string name="detail_review">Detail_Review</string>
    <string name="review">Review</string>
    <string name="reviews">REVIEWS</string>
    <string name="play_icon">play_icon</string>
    <string name="trailers">TRAILERS</string>
</resources>
