<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detailActivity.DetailActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="444dp"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/poster_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/rating_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/rating"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/date_detail" />

        <TextView
            android:id="@+id/plot_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/plot_synopsis"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>